--- a/helmcharts/stable/Chart.yaml
+++ b/helmcharts/stable/Chart.yaml
@@ -13,7 +13,7 @@
 apiVersion: v1
 description: A Helm chart for deploying Eclipse Che on a Kubernetes
 name: eclipse-che
-version: 7.53.0
+version: 7.54.0
 annotations:
   artifacthub.io/license: EPL-2.0
   artifacthub.io/links: |
@@ -36,7 +36,7 @@ annotations:
   artifacthub.io/crdsExamples: "- apiVersion: org.eclipse.che/v2\n  kind: CheCluster\n\
     \  metadata:\n    name: eclipse-che\n    namespace: eclipse-che\n  spec:\n   \
     \ components: {}\n    devEnvironments: {}\n    networking: {}\n    containerRegistry:\
-    \ {}\n"
+    \ {}\n    gitServices: {}\n"
   artifacthub.io/crds: |-
     - kind: CheCluster
       version: v2
