feat: Allow to configure subdomain isolation for GitHub
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -7121,6 +7121,9 @@ spec:
                         description: GitHubService enables users to work with repositories
                           hosted on GitHub (GitHub.com or GitHub Enterprise).
                         properties:
+                          disableSubdomainIsolation:
+                            description: Disables subdomain isolation.
+                            type: boolean
                           endpoint:
                             default: https://github.com
                             description: GitHub server endpoint URL.
