--- a/config/openshift/olm/kustomization.yaml
+++ b/config/openshift/olm/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
 
 patchesStrategicMerge:
   - patches/extralabels_in_checlusters.yaml
+  - patches/extralabels_in_service.yaml
 
 patchesJson6902:
   - target:
