feat: Add devEnvironments.disableContainerBuildCapabilities field
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -6960,6 +6960,9 @@ spec:
                             type: array
                         type: object
                       type: array
+                    disableContainerBuildCapabilities:
+                      description: Disables the container build capabilities.
+                      type: boolean
                     nodeSelector:
                       additionalProperties:
                         type: string
@@ -7083,6 +7086,8 @@ spec:
                             label.'
                           type: string
                       type: object
+                  required:
+                    - disableContainerBuildCapabilities
                   type: object
                 gitServices:
                   description: A configuration that allows users to work with remote
