--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6770,6 +6770,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                  disableContainerBuildCapabilities:
+                    description: Disables the container build capabilities.
+                    type: boolean
                   nodeSelector:
                     additionalProperties:
                       type: string
@@ -6890,6 +6893,8 @@ spec:
                           label.'
                         type: string
                     type: object
+                required:
+                - disableContainerBuildCapabilities
                 type: object
               gitServices:
                 description: A configuration that allows users to work with remote
