fix: Add default value
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -4568,6 +4568,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
+                    default: false
                     description: Disables the container build capabilities.
                     type: boolean
                   nodeSelector:
