--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -6961,6 +6961,7 @@ spec:
                         type: object
                       type: array
                     disableContainerBuildCapabilities:
+                      default: false
                       description: Disables the container build capabilities.
                       type: boolean
                     nodeSelector:
