--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6771,6 +6771,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
+                    default: false
                     description: Disables the container build capabilities.
                     type: boolean
                   nodeSelector:
