--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -4573,6 +4573,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
+                    default: false
                     description: Disables the container build capabilities.
                     type: boolean
                   nodeSelector:
