feat: Add devEnvironments.disableContainerBuildCapabilities field (#1536)
* feat: Add devEnvironments.disableContainerBuildCapabilities field

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6770,6 +6770,10 @@ spec:
                           type: array
                       type: object
                     type: array
+                  disableContainerBuildCapabilities:
+                    default: false
+                    description: Disables the container build capabilities.
+                    type: boolean
                   nodeSelector:
                     additionalProperties:
                       type: string
