--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -4572,6 +4572,10 @@ spec:
                           type: array
                       type: object
                     type: array
+                  disableContainerBuildCapabilities:
+                    default: false
+                    description: Disables the container build capabilities.
+                    type: boolean
                   nodeSelector:
                     additionalProperties:
                       type: string
