chore: disableContainerBuildCapabilities=true default
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -5407,6 +5407,7 @@ spec:
                     defaultNamespace:
                       autoProvision: true
                       template: <username>-che
+                    disableContainerBuildCapabilities: true
                     secondsOfInactivityBeforeIdling: 1800
                     secondsOfRunBeforeIdling: -1
                     storage:
@@ -6961,7 +6962,7 @@ spec:
                         type: object
                       type: array
                     disableContainerBuildCapabilities:
-                      default: false
+                      default: true
                       description: Disables the container build capabilities.
                       type: boolean
                     nodeSelector:
