--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5268,6 +5268,7 @@ spec:
                   defaultNamespace:
                     autoProvision: true
                     template: <username>-che
+                  disableContainerBuildCapabilities: true
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   storage:
@@ -6771,7 +6772,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
-                    default: false
+                    default: true
                     description: Disables the container build capabilities.
                     type: boolean
                   nodeSelector:
