--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -3604,6 +3604,7 @@ spec:
                   defaultNamespace:
                     autoProvision: true
                     template: <username>-che
+                  disableContainerBuildCapabilities: true
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   storage:
@@ -4568,7 +4569,7 @@ spec:
                       type: object
                     type: array
                   disableContainerBuildCapabilities:
-                    default: false
+                    default: true
                     description: Disables the container build capabilities.
                     type: boolean
                   nodeSelector:
