ci: Release OLM files to 7.55.0
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/bundle/stable/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/stable/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -5407,6 +5407,7 @@ spec:
                     defaultNamespace:
                       autoProvision: true
                       template: <username>-che
+                    disableContainerBuildCapabilities: true
                     secondsOfInactivityBeforeIdling: 1800
                     secondsOfRunBeforeIdling: -1
                     storage:
@@ -6960,6 +6961,10 @@ spec:
                             type: array
                         type: object
                       type: array
+                    disableContainerBuildCapabilities:
+                      default: true
+                      description: Disables the container build capabilities.
+                      type: boolean
                     nodeSelector:
                       additionalProperties:
                         type: string
@@ -7121,6 +7126,9 @@ spec:
                         description: GitHubService enables users to work with repositories
                           hosted on GitHub (GitHub.com or GitHub Enterprise).
                         properties:
+                          disableSubdomainIsolation:
+                            description: Disables subdomain isolation.
+                            type: boolean
                           endpoint:
                             default: https://github.com
                             description: GitHub server endpoint URL.
