--- a/config/kubernetes/patches/cainjection_in_webhook.yaml
+++ b/config/kubernetes/patches/cainjection_in_webhook.yaml
@@ -9,7 +9,14 @@
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
 #
-
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: MutatingWebhookConfiguration
+metadata:
+  name: org.eclipse.che
+  annotations:
+    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
+---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
