--- a/deploy/deployment/kubernetes/objects/org.eclipse.che.MutatingWebhookConfiguration.yaml
+++ b/deploy/deployment/kubernetes/objects/org.eclipse.che.MutatingWebhookConfiguration.yaml
@@ -9,48 +9,18 @@
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
 #
----
+
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
-  name: org.eclipse.che
+  annotations:
+    cert-manager.io/inject-ca-from: eclipse-che/che-operator-serving-cert
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-webhooks:
-  - admissionReviewVersions:
-      - v1
-      - v1beta1
-    clientConfig:
-      service:
-        name: che-operator-service
-        namespace: eclipse-che
-        path: /mutate-org-eclipse-che-v2-checluster
-    failurePolicy: Fail
-    name: mchecluster.kb.io
-    rules:
-      - apiGroups:
-          - org.eclipse.che
-        apiVersions:
-          - v2
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - checlusters
-    sideEffects: None
----
-apiVersion: admissionregistration.k8s.io/v1
-kind: ValidatingWebhookConfiguration
-metadata:
   name: org.eclipse.che
-  labels:
-    app.kubernetes.io/component: che-operator
-    app.kubernetes.io/instance: che
-    app.kubernetes.io/name: che
-    app.kubernetes.io/part-of: che.eclipse.org
 webhooks:
 - admissionReviewVersions:
   - v1
@@ -59,9 +29,9 @@ webhooks:
     service:
       name: che-operator-service
       namespace: eclipse-che
-      path: /validate-org-eclipse-che-v2-checluster
+      path: /mutate-org-eclipse-che-v2-checluster
   failurePolicy: Fail
-  name: vchecluster.kb.io
+  name: mchecluster.kb.io
   rules:
   - apiGroups:
     - org.eclipse.che
