--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.56.0-703.next
+  name: eclipse-che-preview-openshift.v7.56.0-707.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -141,11 +141,6 @@ spec:
               images.
             displayName: Container registry
             path: containerRegistry
-          - description: OpenShift security context constraint to build containers.
-            displayName: Open Shift Security Context Constraint
-            path: devEnvironments.containerBuildConfiguration.openShiftSecurityContextConstraint
-            x-descriptors:
-              - urn:alm:descriptor:io.kubernetes:SecurityContextConstraint
           - description: Enables users to work with repositories hosted on Bitbucket
               (bitbucket.org or self-hosted).
             displayName: Bitbucket
@@ -868,6 +863,15 @@ spec:
                 - subjectaccessreviews
               verbs:
                 - create
+            - apiGroups:
+                - security.openshift.io
+              resources:
+                - securitycontextconstraints
+              verbs:
+                - get
+                - create
+                - delete
+                - update
           serviceAccountName: che-operator
       deployments:
         - name: che-operator
@@ -1235,7 +1239,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.56.0-703.next
+  version: 7.56.0-707.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
