--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.55.0-699.next
+  name: eclipse-che-preview-openshift.v7.56.0-707.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -863,6 +863,15 @@ spec:
                 - subjectaccessreviews
               verbs:
                 - create
+            - apiGroups:
+                - security.openshift.io
+              resources:
+                - securitycontextconstraints
+              verbs:
+                - get
+                - create
+                - delete
+                - update
           serviceAccountName: che-operator
       deployments:
         - name: che-operator
@@ -1230,7 +1239,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.55.0-699.next
+  version: 7.56.0-707.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
@@ -1253,6 +1262,27 @@ spec:
       targetPort: 9443
       type: ValidatingAdmissionWebhook
       webhookPath: /validate-org-eclipse-che-v2-checluster
+    - admissionReviewVersions:
+        - v1
+        - v1beta1
+      containerPort: 443
+      deploymentName: che-operator
+      failurePolicy: Fail
+      generateName: mchecluster.kb.io
+      rules:
+        - apiGroups:
+            - org.eclipse.che
+          apiVersions:
+            - v2
+          operations:
+            - CREATE
+            - UPDATE
+          resources:
+            - checlusters
+      sideEffects: None
+      targetPort: 9443
+      type: MutatingAdmissionWebhook
+      webhookPath: /mutate-org-eclipse-che-v2-checluster
     - admissionReviewVersions:
         - v1
         - v2
