--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -3929,6 +3929,8 @@ spec:
                       claimSize: 1Gi
                   metrics:
                     enable: true
+                  pluginRegistry:
+                    openVSXURL: https://open-vsx.org
                 description: Che components configuration.
                 properties:
                   cheServer:
@@ -5008,6 +5010,8 @@ spec:
                         type: boolean
                     type: object
                   pluginRegistry:
+                    default:
+                      openVSXURL: https://open-vsx.org
                     description: Configuration settings related to the plug-in registry
                       used by the Che installation.
                     properties:
@@ -5234,6 +5238,7 @@ spec:
                           type: object
                         type: array
                       openVSXURL:
+                        default: https://open-vsx.org
                         description: Open VSX registry URL. If omitted an embedded
                           instance will be used.
                         type: string
