--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -2614,6 +2614,8 @@ spec:
                       claimSize: 1Gi
                   metrics:
                     enable: true
+                  pluginRegistry:
+                    openVSXURL: https://open-vsx.org
                 description: Che components configuration.
                 properties:
                   cheServer:
@@ -3413,6 +3415,8 @@ spec:
                         type: boolean
                     type: object
                   pluginRegistry:
+                    default:
+                      openVSXURL: https://open-vsx.org
                     description: Configuration settings related to the plug-in registry used by the Che installation.
                     properties:
                       deployment:
@@ -3585,6 +3589,7 @@ spec:
                           type: object
                         type: array
                       openVSXURL:
+                        default: https://open-vsx.org
                         description: Open VSX registry URL. If omitted an embedded instance will be used.
                         type: string
                     type: object
