--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -2609,6 +2609,8 @@ spec:
                       claimSize: 1Gi
                   metrics:
                     enable: true
+                  pluginRegistry:
+                    openVSXURL: https://open-vsx.org
                 description: Che components configuration.
                 properties:
                   cheServer:
@@ -3408,6 +3410,8 @@ spec:
                         type: boolean
                     type: object
                   pluginRegistry:
+                    default:
+                      openVSXURL: https://open-vsx.org
                     description: Configuration settings related to the plug-in registry used by the Che installation.
                     properties:
                       deployment:
@@ -3580,6 +3584,7 @@ spec:
                           type: object
                         type: array
                       openVSXURL:
+                        default: https://open-vsx.org
                         description: Open VSX registry URL. If omitted an embedded instance will be used.
                         type: string
                     type: object
