chore: Update README.md
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
       "name": "Launch Main *.go File",
       "type": "go",
       "request": "launch",
-      "program": "${file}",
+      "program": "${file}"
     }
   ]
 }
