--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Compile che-operator code",
+            "label": "Compile Che operator code",
             "command": "make compile",
             "options": {
                 "env": {
@@ -20,21 +20,8 @@
             "group": "build"
         },
         {
-            "label": "Format che-operator code",
-            "command": "go fmt ./...",
-            "type": "shell",
-            "args": [],
-            "problemMatcher": [
-                "$go"
-            ],
-            "presentation": {
-                "reveal": "always"
-            },
-            "group": "build"
-        },
-        {
-            "label": "Fix che-operator imports",
-            "command": "find . -not -path \"./vendor/*\" -name '*.go' -exec goimports -l -w {} \\;",
+            "label": "Format Che operator code",
+            "command": "make fmt",
             "type": "shell",
             "args": [],
             "problemMatcher": [
@@ -47,7 +34,7 @@
         },
         {
             "label": "Update golang dependencies",
-            "command": "go mod tidy; go mod vendor",
+            "command": "make update-go-dependencies",
             "type": "shell",
             "args": [],
             "problemMatcher": [
@@ -59,8 +46,8 @@
             "group": "build"
         },
         {
-            "label": "Run che-operator tests",
-            "command": "go test -mod=vendor -v ./...",
+            "label": "Run unit tests",
+            "command": "make test",
             "type": "shell",
             "args": [],
             "problemMatcher": [
@@ -77,7 +64,7 @@
             "group": "build"
         },
         {
-            "label": "Update all",
+            "label": "Update development resources",
             "command": "make update-dev-resources",
             "type": "shell",
             "args": [],
@@ -90,8 +77,8 @@
             "group": "build"
         },
         {
-            "label": "Update CR/CRDs",
-            "command": "make generate manifests -s",
+            "label": "Debug Che operator",
+            "command": "make debug",
             "type": "shell",
             "args": [],
             "problemMatcher": [
@@ -101,19 +88,6 @@
                 "reveal": "always"
             },
             "group": "build"
-        },
-        {
-            "label": "Await debugger attach for che-operator",
-            "command": "make debug -s",
-            "type": "shell",
-            "args": [],
-            "problemMatcher": [
-                "$go"
-            ],
-            "presentation": {
-                "reveal": "always"
-            },
-            "group": "build"
-        },
+        }
     ]
 }
