--- a/config/manifests/bases/che-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/che-operator.clusterserviceversion.yaml
@@ -27,7 +27,7 @@ metadata:
       "fips"]'
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v0.0.0
+  name: eclipse-che.v0.0.0
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -464,6 +464,7 @@ spec:
   - email: abazko@redhat.com
     name: Anatolii Bazko
   maturity: stable
+  minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
   version: 0.0.0
