Build images on every commit
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/.github/workflows/build-catalog-and-bundle-images.yaml
+++ b/.github/workflows/build-catalog-and-bundle-images.yaml
@@ -18,10 +18,9 @@ on:
       reason:
         description: 'Reason to trigger a build'
         required: false
-  schedule:
-    - cron:  '0 21 * * *'
-      branches:
-        - main
+  push:
+    branches:
+      - main
 jobs:
   build-images:
     name: Build
