--- a/olm-catalog/next/channel.yaml
+++ b/olm-catalog/next/channel.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019-2021 Red Hat, Inc.
+# Copyright (c) 2019-2022 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -10,6 +10,8 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-**/*.diff
-**/*.sh
-**/*Dockerfile
+schema: olm.channel
+package: eclipse-che
+name: next
+entries:
+  - name: eclipse-che.v7.56.0-724.next
