feat: add spec.devEnvironments.podSchedulerName in CR
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6790,6 +6790,10 @@ spec:
                     description: The node selector limits the nodes that can run the
                       workspace pods.
                     type: object
+                  podSchedulerName:
+                    description: Pod scheduler for the workspace pods. If not specified,
+                      the pod scheduler is set to the default scheduler on the cluster.
+                    type: string
                   secondsOfInactivityBeforeIdling:
                     default: 1800
                     description: Idle timeout for workspaces in seconds. This timeout
