chore: Use the same secret name for a webhook service
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/openshift/patches/cainjection_in_webhook.yaml
+++ b/config/openshift/patches/cainjection_in_webhook.yaml
@@ -9,9 +9,16 @@
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
 #
-
+---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
+metadata:
+  name: org.eclipse.che
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: MutatingWebhookConfiguration
 metadata:
   name: org.eclipse.che
   annotations:
