--- a/config/kubernetes/kustomization.yaml
+++ b/config/kubernetes/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
 patchesStrategicMerge:
   - patches/cainjection_in_checlusters.yaml
   - patches/cainjection_in_webhook.yaml
+  - patches/service_cert_patch.yaml
   - patches/manager_pod_security_context.yaml
 
 vars:
