--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -5691,7 +5691,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    service.beta.openshift.io/serving-cert-secret-name: che-operator-webhook-server-cert
+    service.beta.openshift.io/serving-cert-secret-name: che-operator-service-cert
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
@@ -5834,25 +5834,18 @@ spec:
             - ALL
           privileged: false
           readOnlyRootFilesystem: false
-        volumeMounts:
-        - mountPath: /tmp/k8s-webhook-server/serving-certs
-          name: webhook-tls-certs
-          readOnly: true
       hostIPC: false
       hostNetwork: false
       hostPID: false
       restartPolicy: Always
       serviceAccountName: che-operator
       terminationGracePeriodSeconds: 20
-      volumes:
-      - name: webhook-tls-certs
-        secret:
-          defaultMode: 420
-          secretName: che-operator-webhook-server-cert
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
