--- a/deploy/deployment/openshift/objects/org.eclipse.che.MutatingWebhookConfiguration.yaml
+++ b/deploy/deployment/openshift/objects/org.eclipse.che.MutatingWebhookConfiguration.yaml
@@ -13,6 +13,8 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
